# saverbot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
saverbot/: bot.py
saverbot/app/: handlers.py
saverbot/parser/: __init__.py  instagram.txt  parser.py  pinterest.txt  pintrest.txt  tiktok.txt
saverbot/scripts/: dowload.py  tiktok.py
