[tool.poetry]
name = "saverbot"
version = "0.1.0"
description = ""
authors = ["midnight <ivanator666@gmail.com>"]
license = "GPL v3"
readme = "README.md"
packages = [
    {include = "saverbot"}
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
aiogram = "^3.15.0"
python-dotenv = "^1.0.1"
yt-dlp = "^2024.11.4"
instaloader = "^4.14"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"


[tool.poetry.scripts]
bot = "saverbot.bot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
